# internal/adapters/controller/api/v1/user.go
@@ -9,6 +9,7 @@ import (
 	"webTemplate/cmd/app"
 	"webTemplate/internal/adapters/controller/api/validator"
 	"webTemplate/internal/adapters/database/postgres"
+	"webTemplate/internal/adapters/logger"
 	"webTemplate/internal/domain/dto"
 	"webTemplate/internal/domain/entity"
 	"webTemplate/internal/domain/service"
@@ -17,6 +18,8 @@ import (
 
 type UserService interface {
 	Create(ctx context.Context, registerReq dto.UserRegister, code string) (*entity.User, error)
+	GetByID(ctx context.Context, uuid string) (*entity.User, error)
+	Update(ctx context.Context, user *entity.User) (*entity.User, error)
 	GetByEmail(ctx context.Context, email string) (*entity.User, error)
 }
 
@@ -79,6 +82,7 @@ func (h UserHandler) register(c *fiber.Ctx) error {
 
 	mailValid, mvErr := h.emailService.Check(c.Context(), userDTO.Email)
 	if mvErr != nil || !mailValid {
+		logger.Log.Errorf("invalid email: %s", userDTO.Email)
 		return c.Status(fiber.StatusBadRequest).JSON(dto.HTTPError{
 			Code:    fiber.StatusBadRequest,
 			Message: "invalid email",
@@ -88,6 +92,7 @@ func (h UserHandler) register(c *fiber.Ctx) error {
 	code := auth.GenerateCode()
 	msErr := h.emailService.Send(c.Context(), userDTO.Email, fmt.Sprintf("Your code is: <b>%s</b>", code), "Verification Code")
 	if msErr != nil {
+		logger.Log.Errorf("email sending error: %s", msErr.Error())
 		return c.Status(fiber.StatusInternalServerError).JSON(dto.HTTPError{
 			Code:    fiber.StatusInternalServerError,
 			Message: msErr.Error(),
@@ -258,22 +263,75 @@ func (h UserHandler) refreshToken(c *fiber.Ctx) error {
 // @Tags         user
 // @Accept       json
 // @Produce      json
-// @Security JWT
-// @Success      200  {object}  dto.Token
+// @Security Bearer
+// @Param        body body  dto.UserCode true  "User's email code"
+// @Success      200  {object}  dto.HTTPStatus
 // @Failure      400  {object}  dto.HTTPError
+// @Failure      401  {object}  dto.HTTPError
 // @Failure      403  {object}  dto.HTTPError
 // @Failure      500  {object}  dto.HTTPError
 // @Router       /user/verify [post]
 func (h UserHandler) verify(c *fiber.Ctx) error {
-	return c.Status(fiber.StatusOK).JSON(fiber.Map{
-		"ok": true,
-	})
+	var userCode dto.UserCode
+
+	if err := c.BodyParser(&userCode); err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(dto.HTTPError{
+			Code:    fiber.StatusBadRequest,
+			Message: err.Error(),
+		})
+	}
+
+	if errValidate := h.validator.ValidateData(userCode); errValidate != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(dto.HTTPError{
+			Code:    fiber.StatusBadRequest,
+			Message: errValidate.Error(),
+		})
+	}
+
+	user, authErr := auth.GetUserFromJWT(c.Get("Authorization"), auth.TokenTypeAccess, c.Context(), h.userService.GetByID)
+
+	if authErr != nil {
+		return c.Status(fiber.StatusUnauthorized).JSON(dto.HTTPError{
+			Code:    fiber.StatusUnauthorized,
+			Message: authErr.Error(),
+		})
+	}
+
+	if user.VerificationCode == "NULL" {
+		return c.Status(fiber.StatusBadRequest).JSON(dto.HTTPError{
+			Code:    fiber.StatusBadRequest,
+			Message: "already verified",
+		})
+	}
+
+	if user.VerificationCode != userCode.Code {
+		return c.Status(fiber.StatusForbidden).JSON(dto.HTTPError{
+			Code:    fiber.StatusForbidden,
+			Message: "invalid code",
+		})
+	}
+
+	user.VerificationCode = "NULL"
+	_, updateErr := h.userService.Update(c.Context(), user)
+	if updateErr != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(dto.HTTPError{
+			Code:    fiber.StatusInternalServerError,
+			Message: updateErr.Error(),
+		})
+	}
+
+	response := dto.HTTPStatus{
+		Code:    200,
+		Message: "email verified",
+	}
+
+	return c.Status(fiber.StatusOK).JSON(response)
 }
 
-func (h UserHandler) Setup(router fiber.Router) {
+func (h UserHandler) Setup(router fiber.Router, middleware fiber.Handler) {
 	userGroup := router.Group("/user")
 	userGroup.Post("/register", h.register)
 	userGroup.Post("/login", h.login)
 	userGroup.Post("/refresh", h.refreshToken)
-	userGroup.Post("/verify", h.verify)
+	userGroup.Post("/verify", h.verify, middleware)
 }
